[package]
name = "update-tool"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Controls",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
] }

[build-dependencies]
winresource = "0.1"
